clusters/constellation/apps/vouch/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vouch
  namespace: vouch
  labels:
    app: vouch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vouch
  template:
    metadata:
      labels:
        app: vouch
    spec:
      securityContext:
        fsGroup: 999
      containers:
      - name: vouch
        image: quay.io/vouch/vouch-proxy:alpine-0.40.0
        ports:
        - name: http
          containerPort: 9090
        securityContext:
          runAsNonRoot: true
          runAsUser: 999
