clusters/constellation/apps/vouch/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vouch
  namespace: vouch
spec:
  selector:
    app: vouch
  ports:
  - protocol: TCP
    port: 9090
    targetPort: 9090
