clusters/constellation/apps/vouch/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vouch
  namespace: vouch
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - "vouch.spuxx.dev"
    secretName: spuxx.dev
  rules:
  - host: vouch.spuxx.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vouch
            port:
              number: 9090
